Bug 1315600 - Part 1: Mask behind animation name is too long for animations running on the compositor. r=pbro
MozReview-Commit-ID: 3emNof5b908

UltraBlame original commit: e4636b63cd369040faf645417f512b814f8f7d2c

--- a/devtools/client/themes/animationinspector.css
+++ b/devtools/client/themes/animationinspector.css
@@ -2315,40 +2315,6 @@ fast
 track
 .
 name
-div
-{
-width
-:
-calc
-(
-100
-%
--
-var
-(
--
--
-fast
--
-track
--
-icon
--
-width
-)
-)
-;
-}
-.
-animation
--
-timeline
-.
-fast
--
-track
-.
-name
 :
 :
 after
